--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@ body {
   margin-top: 100px;
 }
 
+h1 {
+  font-family: Roboto, sans-serif;
+}
 .todo-list {
   background-color: white;
   margin: auto;
